2001-04-25  Arturo Espinosa Aldama  <arturo@ximian.com>

	* filesys.pl.in (xst_filesys_translate_ext2_device_to_label):
	chomp is the same in this case, and a common idiom. Also,
	always return $label, as "" eq undef.
	Some other style changes.
	(xst_filesys_table_merge_superset): merge stuff missing in
	first table from second one.
	(xst_filesys_table_merge_subset): delete stuff in first table
	missing	in second.
	(xst_filesys_table_to_hash): This made these two possible.
	(xst_filesys_hash_to_table): Don't you love Perl?
	(xst_filesys_info_merge): Merge stuff inside infos.
	(xst_filesys_info_merge_options): And options.
	(merge_hashes): Small utility that makes life more bearable.

2001-04-23  Arturo Espinosa  <arturo@ximian.com>

	* debug.pl.in: minor cosmetic change to path.
	* general.pl.in: require gettext.pl routines and set textdomain
	to "ximian-setup-tools".
	* gettext.pl.in: Removed function N_. This is only a C trick
	to fool the preprocessor. Oh, but this is not C.
	* report.pl.in: Surround strings to be translated by '_()'.
	
2001-04-23  Arturo Espinosa  <arturo@ximian.com>

	* network.pl.in: init.d script for smb in Debian is samba.
	* service.pl.in (xst_service_sysv_get_paths): Added paths for
	  Debian and Mandrake.
	* time-conf.in: Check for service availability and activation.
	  Minor indentation fixes.
	
2001-04-23  Arturo Espinosa  <arturo@ximian.com>

	* parse.pl.in (xst_parse_interfaces_option_str/kw): this code
	  was passing invalid xst_report keys. How did this get here?

	* time-conf.in: redhat-7.0, mdk-7.2 & debian-2.2 parse/replace
	  tables.
	
2001-04-20  Arturo Espinosa  <arturo@ximian.com>

	* report.pl.in (xst_report): As we are killing the format strings
	  from the frontend common code, we pass it in the report now.
	
2001-04-19  Arturo Espinosa  <arturo@ximian.com>

	* file.pl.in (xst_file_run): return -1 if command fails to be found.
	  return system (command) / 256 (as stated in perlfunc) to return exit